objects/blng__SubInvoiceLine__c.object
<CustomObject>
    <fields>
        <fullName>blng__BillingTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Transaction</label>
        <referenceTo>blng__BillingTransaction__c</referenceTo>
        <relationshipLabel>Sub Invoice Lines</relationshipLabel>
        <relationshipName>Sub_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ChargeDate__c</fullName>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Sub Invoice Lines</relationshipLabel>
        <relationshipName>InvoiceLineSubInvoiceLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Sub Invoice Lines</relationshipLabel>
        <relationshipName>OrderProductSubInvoiceLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <label>Unique Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <label>Sub Invoice Line</label>
    <nameField>
        <displayFormat>SIL-{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>